--- a/product/存储与CDN/对象存储 4.0/SDK文档/C++ SDK/接口文档.md
+++ b/product/存储与CDN/对象存储 4.0/SDK文档/C++ SDK/接口文档.md
@@ -1137,6 +1137,8 @@ if (result.IsSucc()) {
 #### 功能说明
 Put Object 请求可以将一个文件（Object）上传至指定 Bucket。
 
+*Tips:上传过程中默认会对文件进行MD5校验（关闭上传MD5校验参考示例代码）
+
 #### 方法原型
 ```cpp
 /// 通过 Stream 进行上传
@@ -1227,6 +1229,8 @@ std::string object_name = "object_name";
     qcloud_cos::PutObjectByStreamReq req(bucket_name, object_name, iss);
     // 调用 Set 方法设置元数据或者 ACL 等
     req.SetXCosStorageClass("STANDARD_IA");
+    // 关闭MD5校验，开启使用req.TurnOnComputeConentMd5()，默认情况开启
+    req.TurnOffComputeConentMd5();
     qcloud_cos::PutObjectByStreamResp resp;
     qcloud_cos::CosResult result = cos.PutObject(req, &resp);
     
@@ -1251,6 +1255,8 @@ std::string object_name = "object_name";
     qcloud_cos::PutObjectByFileReq req(bucket_name, object_name, "/path/to/local/file");
     // 调用 Set 方法设置元数据或者 ACL 等
     req.SetXCosStorageClass("STANDARD_IA");
+    // 关闭MD5校验，开启使用req.TurnOnComputeConentMd5()，默认情况开启
+    req.TurnOffComputeConentMd5();
     qcloud_cos::PutObjectByFileResp resp;
     qcloud_cos::CosResult result = cos.PutObject(req, &resp);
         if (result.IsSucc()) {
@@ -1400,6 +1406,8 @@ if (result.IsSucc()) {
 #### 功能说明
 Upload Part 请求实现在初始化以后的分块上传，支持的块的数量为 1 到 10000，块的大小为 1 MB 到 5 GB。在每次请求 Upload Part 时，需要携带 partNumber 和 uploadID，partNumber 为块的编号，支持乱序上传。
 
+*Tips:上传过程中默认会对文件进行MD5校验（关闭上传MD5校验参考示例代码）
+
 #### 方法原型
 ```cpp
 CosResult UploadPartData(const UploadPartDataReq& request, UploadPartDataResp* response);
@@ -1435,6 +1443,8 @@ std::string GetXCosServerSideEncryption();
     qcloud_cos::UploadPartDataReq req(bucket_name, object_name,
                                       upload_id, is);
     req.SetPartNumber(1);
+    // 关闭MD5校验，开启使用req.TurnOnComputeConentMd5()，默认情况开启
+    req.TurnOffComputeConentMd5();
     qcloud_cos::UploadPartDataResp resp;
     qcloud_cos::CosResult result = cos.UploadPartData(req, &resp);
 
